--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -19,6 +19,7 @@
      
      <h1 class="screen-reader-only">Profile</h1> 
      <h2 class='text-center'>Profile {{profile.user.username}}</h2>
+     <h2 class='text-center'>Register as : {{profile.user.role}}</h2>
       <hr>
         <div>
           
