--- a/polls/templates/polls/home.html
+++ b/polls/templates/polls/home.html
@@ -44,9 +44,9 @@
     <section class='polls bg-dark-subtle -black row'>
         <div class="row">
             <!-- filter by category -->
-            <div class="dropdown col-md-6 col-sm-6">
+            <div class="dropdown col-sm-6">
               <button class="btn btn-light bg-secondary text-light dropdown-toggle" type="button" id="dropdownMenuButton2" data-bs-toggle="dropdown" aria-expanded="false">
-              Filter By Category ..
+              Filter By ..
               </button>
               <ul class="dropdown-menu dropdown-menu-info" aria-labelledby="dropdownMenuButton2">
                   {% for cat in categories %} 
@@ -64,7 +64,7 @@
             &nbsp &nbsp
 
             <!-- sort by -->
-            <div class="dropdown col-md-6 col-sm-6">
+            <div class="dropdown col-sm-6">
               <button class="btn btn-light bg-secondary text-light dropdown-toggle" type="button" id="dropdownMenuButton2" data-bs-toggle="dropdown" aria-expanded="false">
               Sort By ..
               </button>
