--- a/polls/templates/polls/home.html
+++ b/polls/templates/polls/home.html
@@ -44,42 +44,46 @@
     <section class='polls bg-dark-subtle -black row'>
         <div class="row">
             <!-- filter by category -->
-            <div class="dropdown col-sm-6">
-              <button class="btn btn-light bg-secondary text-light dropdown-toggle" type="button" id="dropdownMenuButton2" data-bs-toggle="dropdown" aria-expanded="false">
-              Filter By ..
-              </button>
-              <ul class="dropdown-menu dropdown-menu-info" aria-labelledby="dropdownMenuButton2">
-                  {% for cat in categories %} 
-                      <li>
-                        <a  class="dropdown-item" href="{% url 'polls:home-filter-category' catslug=cat.slug %}">
-                              {{ cat.name|title }} - ({{cat.polls_count}})
-                        </a>
-                      </li>
-                  {% empty %}
-                      <li class='p-1'>No Category</li>
-                  {% endfor %}
-              </ul>
+            <div class="col-sm-6">
+              <div class="dropdown">
+                <button class="btn btn-light bg-secondary text-light dropdown-toggle" type="button" id="dropdownMenuButton2" data-bs-toggle="dropdown" aria-expanded="false">
+                Filter By ..
+                </button>
+                <ul class="dropdown-menu dropdown-menu-info" aria-labelledby="dropdownMenuButton2">
+                    {% for cat in categories %} 
+                        <li>
+                          <a  class="dropdown-item" href="{% url 'polls:home-filter-category' catslug=cat.slug %}">
+                                {{ cat.name|title }} - ({{cat.polls_count}})
+                          </a>
+                        </li>
+                    {% empty %}
+                        <li class='p-1'>No Category</li>
+                    {% endfor %}
+                </ul>
+              </div>
             </div>
         
             &nbsp &nbsp
 
             <!-- sort by -->
-            <div class="dropdown col-sm-6">
-              <button class="btn btn-light bg-secondary text-light dropdown-toggle" type="button" id="dropdownMenuButton2" data-bs-toggle="dropdown" aria-expanded="false">
-              Sort By ..
-              </button>
-              <ul class="dropdown-menu dropdown-menu-info" aria-labelledby="dropdownMenuButton2">
-                <li><a class="dropdown-item"  href="{% url 'polls:home-sort-by' sort_by="PUB" %}">Date Published</a></li>
-                <li><a class="dropdown-item"  href="{% url 'polls:home-sort-by' sort_by="VOT" %}">Voter Count</a></li>
-                <li><a class="dropdown-item"  href="{% url 'polls:home-sort-by' sort_by="ALPH" %}" >Alphabetic</a></li>
-              </ul>
+            <div class="col-sm-6">
+              <div class="dropdown">
+                <button class="btn btn-light bg-secondary text-light dropdown-toggle" type="button" id="dropdownMenuButton2" data-bs-toggle="dropdown" aria-expanded="false">
+                Sort By ..
+                </button>
+                <ul class="dropdown-menu dropdown-menu-info" aria-labelledby="dropdownMenuButton2">
+                  <li><a class="dropdown-item"  href="{% url 'polls:home-sort-by' sort_by="PUB" %}">Date Published</a></li>
+                  <li><a class="dropdown-item"  href="{% url 'polls:home-sort-by' sort_by="VOT" %}">Voter Count</a></li>
+                  <li><a class="dropdown-item"  href="{% url 'polls:home-sort-by' sort_by="ALPH" %}" >Alphabetic</a></li>
+                </ul>
+              </div>
             </div>
       
             &nbsp &nbsp
       <div/>
       <div class='row'>
             <!-- search by name -->
-            <div class="col-sm-12">
+            <div class="col-sm">
               <form class="form-inline input-group flex-nowrap" action={% url 'polls:home' %} method="GET">
                   <input type="text" name="sc" {%if sc  %} value="{{sc}}"{% endif %} class='form-control bg-light' placeholder="Search By Word...">
                   <button type="submit" class="btn btn-sm btn-light bg-secondary text-light">
