--- a/polls/templates/polls/home.html
+++ b/polls/templates/polls/home.html
@@ -41,10 +41,10 @@
         <br><br><br>
 
     <!-- all filter  and search row -->
-    <section class='polls bg-dark-subtle -black row'>
+    <section class='polls bg-dark-subtle'>
         <div class="row">
             <!-- filter by category -->
-            <div class="col-sm-6">
+            <div class="col-sm">
               <div class="dropdown">
                 <button class="btn btn-light bg-secondary text-light dropdown-toggle" type="button" id="dropdownMenuButton2" data-bs-toggle="dropdown" aria-expanded="false">
                 Filter By ..
@@ -62,11 +62,8 @@
                 </ul>
               </div>
             </div>
-        
-            &nbsp &nbsp
-
             <!-- sort by -->
-            <div class="col-sm-6">
+            <div class="col-sm">
               <div class="dropdown">
                 <button class="btn btn-light bg-secondary text-light dropdown-toggle" type="button" id="dropdownMenuButton2" data-bs-toggle="dropdown" aria-expanded="false">
                 Sort By ..
@@ -78,10 +75,8 @@
                 </ul>
               </div>
             </div>
-      
-            &nbsp &nbsp
-      <div/>
-      <div class='row'>
+        <div/>
+        <div class='row'>
             <!-- search by name -->
             <div class="col-sm">
               <form class="form-inline input-group flex-nowrap" action={% url 'polls:home' %} method="GET">
@@ -91,9 +86,7 @@
                   </button>
               </form>       
             </div>   
-        
-       
-      </div>
+        </div>
     </section>  
 
 
