--- a/polls/templates/polls/home.html
+++ b/polls/templates/polls/home.html
@@ -44,10 +44,10 @@
     <section class='polls bg-dark-subtle'>
         <div class="row">
             <!-- filter by category -->
-            <div class="col-sm">
+            <div class="col-sm-12">
               <div class="dropdown">
                 <button class="btn btn-light bg-secondary text-light dropdown-toggle" type="button" id="dropdownMenuButton2" data-bs-toggle="dropdown" aria-expanded="false">
-                Filter By ..
+                Filter By Category..
                 </button>
                 <ul class="dropdown-menu dropdown-menu-info" aria-labelledby="dropdownMenuButton2">
                     {% for cat in categories %} 
@@ -63,7 +63,7 @@
               </div>
             </div>
             <!-- sort by -->
-            <div class="col-sm">
+            <div class="col-sm-12">
               <div class="dropdown">
                 <button class="btn btn-light bg-secondary text-light dropdown-toggle" type="button" id="dropdownMenuButton2" data-bs-toggle="dropdown" aria-expanded="false">
                 Sort By ..
