--- a/polls/templates/polls/home.html
+++ b/polls/templates/polls/home.html
@@ -45,7 +45,7 @@
         <div class="row">
             <!-- filter by category -->
             
-              <div class="dropdown">
+              <div class="dropdown d-inline">
                 <button class="btn btn-light bg-secondary text-light dropdown-toggle" type="button" id="dropdownMenuButton2" data-bs-toggle="dropdown" aria-expanded="false">
                 Filter By Category..
                 </button>
@@ -64,7 +64,7 @@
          
             <!-- sort by -->
             
-              <div class="dropdown">
+              <div class="dropdown d-inline">
                 <button class="btn btn-light bg-secondary text-light dropdown-toggle" type="button" id="dropdownMenuButton2" data-bs-toggle="dropdown" aria-expanded="false">
                 Sort By ..
                 </button>
