--- a/polls/templates/polls/home.html
+++ b/polls/templates/polls/home.html
@@ -41,11 +41,11 @@
         <br><br><br>
 
     <!-- all filter  and search row -->
-    <section class='polls bg-dark-subtle'>
-        <div class="row">
+    <nav class='polls bg-dark-subtle navbar'>
+        <div class="container-fluid">
             <!-- filter by category -->
             
-              <div class="dropdown d-inline">
+              <div class="dropdown">
                 <button class="btn btn-light bg-secondary text-light dropdown-toggle" type="button" id="dropdownMenuButton2" data-bs-toggle="dropdown" aria-expanded="false">
                 Filter By Category..
                 </button>
@@ -64,7 +64,7 @@
          
             <!-- sort by -->
             
-              <div class="dropdown d-inline">
+              <div class="dropdown">
                 <button class="btn btn-light bg-secondary text-light dropdown-toggle" type="button" id="dropdownMenuButton2" data-bs-toggle="dropdown" aria-expanded="false">
                 Sort By ..
                 </button>
@@ -88,7 +88,7 @@
               </form>       
          
         </div>
-    </section>  
+    </nav>  
 
 
             
