--- a/polls/templates/polls/home.html
+++ b/polls/templates/polls/home.html
@@ -47,7 +47,7 @@
             
               <div class="dropdown">
                 <button class="btn btn-light bg-secondary text-light dropdown-toggle" type="button" id="dropdownMenuButton2" data-bs-toggle="dropdown" aria-expanded="false">
-                Filter By Category..
+                Filter By..
                 </button>
                 <ul class="dropdown-menu dropdown-menu-info" aria-labelledby="dropdownMenuButton2">
                     {% for cat in categories %} 
