fix errors for SEO

--- a/pages/templates/pages/about.html
+++ b/pages/templates/pages/about.html
@@ -56,8 +56,10 @@
 </head>
 <body class='container'>
     <header class="txt-color">
-        <h1 class='text-light'>CROWDVOICE Polls</h1>
-        <h2 class='text-light'>About Us</h2>
+        <h1 class='text-light'>About CrowdVoice Polls
+            <br>
+            <span class="fs-6">CrowdVoice Polls: Understand Your Audience</span>
+        </h1>
     </header>
 
     <main class="bg-light" >
@@ -68,7 +70,7 @@
         </section>
 
         <section class="features">
-            <h3>Core Features</h3>
+            <h2>Core Features</h2>
             <br>
             <ul>
                 <li>
@@ -95,7 +97,7 @@
         </section>
 
         <section class="mission">
-            <h3>Our Mission</h3>
+            <h2>Our Mission</h2>
             <p>
                 CROWDVOICE Polls strives to provide a platform that:
             </p>
@@ -107,7 +109,7 @@
         </section>
 
         <section class="values">
-            <h3>Our Values</h3>
+            <h2>Our Values</h2>
             <p>
                 We operate with the following core values guiding our development and interactions:
             </p>
@@ -127,7 +129,7 @@
         </section>
 
         <section class="contact">
-            <h3>Contact Us</h3>
+            <h2>Contact Us</h2>
             <p>
                 Should you have any questions or require further assistance, please don't hesitate to contact us through the contact form provided on this website. We're here to help!
             </p>
