--- a/pages/templates/pages/licence.html
+++ b/pages/templates/pages/licence.html
@@ -13,13 +13,16 @@
 
 {% block content %}
 <section class='container polls'>
-    <br><br><br>
+
     <header class="txt-color">
-        <h1 class='text-asecondary'>CROWDVOICE Polls</h1>
-        <h2 class='text-secondary'>License</h2>
+        <h1 class='text-swcondary'>License
+            <br>
+            <span class="fs-6 text-secondary">CrowdVoice Polls Licensing</span>
+        </h1>
     </header>
     
-    <br><br>
+   <hr>
+
   
 <p>
 "CROWDVOICE polls" License Agreement was entered into on 15/03/2024, by and between CROWDVOICE polls hereinafter referred to as the "Licensor" and "the user full name", hereinafter referred to as the "Licensee."
