--- a/polls/templates/polls/home.html
+++ b/polls/templates/polls/home.html
@@ -33,19 +33,26 @@
       <nav class="navbar">
         <div class="container-fluid">
             {% comment %} <img src="{% static 'img/LOGO.png' %}" alt="" width="50" height="50" class="d-inline-block align-text-top"> {% endcomment %}
-           <h1><strong class='txt-color'>CrowdVoice</strong> polls</h1>
+           <h1>
+            <strong class='txt-color'>CrowdVoice</strong> polls
+            <br>
+            <span class="fs-6 text-secondary">Get Audience Insights with CrowdVoice Polls<span>
+          </h1>
         </div>
       </nav>   
       
       
-        <br><br><br>
+       <br><br><br><br>
 
     <!-- all filter  and search row -->
     <nav class='polls bg-dark-subtle navbar'>
         <div class="container-fluid">
             <!-- filter by category -->
             
-              <div class="dropdown">
+              <div>
+                <a class="btn btn-light bg-secondary text-light" type="link" href="{% url 'polls:home' %}">
+                  All
+                </a>
                 <button class="btn btn-light bg-secondary text-light dropdown-toggle" type="button" id="dropdownMenuButton2" data-bs-toggle="dropdown" aria-expanded="false">
                 Filter By..
                 </button>
@@ -60,8 +67,9 @@
                         <li class='p-1'>No Category</li>
                     {% endfor %}
                 </ul>
+                
               </div>
-         
+              
             <!-- sort by -->
             
               <div class="dropdown">
@@ -97,7 +105,7 @@
                         <span class="badge bg-light text-dark"> <i class="fa-solid fa-layer-group"></i> &nbsp{{poll.category|title}}</span>
                           <div>
                               <a class='text-decoration-none' href="{% url 'polls:poll-detail' poll_slug=poll.poll_slug  year=poll.published_at.year  month=poll.published_at.month  day=poll.published_at.day %}">
-                                <p class="fw-bold fw-medium fs-3 text p-2 text-secondary"> {{ poll.poll_descript|safe }}</p>
+                                <h2 class="fw-bold fw-medium fs-3 text p-2 text-secondary"> {{ poll.poll_descript|safe }}</h2>
                               </a>
                           </div> 
                           <div class="d-flex flex-row-reverse">
