--- a/polls/templates/polls/poll_update.html
+++ b/polls/templates/polls/poll_update.html
@@ -14,15 +14,20 @@
 
 {% block content %}
 
-<section class='bg-light container m-2'>
+<section class='bg-light container'>
   
     <br><br>
-    <p>Update poll:</p>
-        <br>
-        <h1>{{ poll.poll_descript|safe }}</h1>
-   <br>
-    <div class='row justify-content-center'>
-        <div class="col-md-10 col-sm-11 border rounded border-secondary p-3 m-5 back-ggg">
+   
+    <div class="card">
+        <div class="card-body">
+             
+            <br>
+            <h1 class="fs-6 text-secondary">{{ poll.poll_descript|safe }}</h1>
+            <br>
+            <hr>
+            <p>Update Form:</p> 
+            <br>
+        
             <form method="POST" enctype='multipart/form-data' novalidate>
                 {% csrf_token %}
 
@@ -36,7 +41,15 @@
                 </div>
              
             </form>
+       
+        
+        
         </div>
     </div>
+      
+        
+      
+   
+            
 </section>
 {% endblock content %}
