--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -17,9 +17,14 @@
 {% block content %} 
 <section class="polls">
      
-     <h1 class="screen-reader-only">Profile</h1> 
-     <h2 class='text-center'>Profile {{profile.user.username}}</h2>
-     <h2 class='text-center'>Register as : {{profile.user.role}}</h2>
+   
+     <h1 class='text-center'>
+      Profile {{profile.user.username}} 
+    <br>
+    <span class="fs-6 text-secondary">Register as : {{profile.user.role}}</span>
+    
+  </h1>
+   
       <hr>
         <div>
           
