fix errors in SEO

--- a/polls/templates/polls/poll_create.html
+++ b/polls/templates/polls/poll_create.html
@@ -15,9 +15,15 @@
 
 {% block content %}
 <section class='bg-light container'>
-    <h1 class="screen-reader-only">Add a New Poll</h1>   
-    <br><br><br>
-    <h2 class='text-center'>Add a new poll</h2>
+    <header class="txt-color text-center">
+        <h1 class='text-swcondary fs-4'>Launch New Poll on CrowdVoice polls
+            <br>
+            <span class="fs-6 text-secondary">Build your audience with us</span>
+        </h1>
+       
+    </header>
+    
+ 
  
    
     <div class='row justify-content-center'>
