--- a/polls/templates/polls/poll_delete_confirm.html
+++ b/polls/templates/polls/poll_delete_confirm.html
@@ -14,8 +14,17 @@
 {% block content %}
 
 <section class='bg-light container'>
-    <br><br><br> 
-    <h1 class="screen-reader-only">Post Delete confirm page</h1>    
+    
+    <header class="txt-color text-center">Delete Poll
+        <h1 class='text-swcondary fs-4'
+            <br>
+            <span class="fs-6 text-secondary">with CROWDVOICE polls you can Delete your poll easly</span>
+        </h1>
+       
+    </header>   
+    
+    
+    
     <div class='row justify-content-center'>
         <div class="col-md-10 col-sm-11 border rounded border-secondary p-3 m-5 back-ggg">
             <form method="POST" enctype='multipart/form-data' novalidate>
