--- a/static/css/polls/polls_style.css
+++ b/static/css/polls/polls_style.css
@@ -34,6 +34,12 @@ body {
     font-size: 36px;
 }
 
+h2{
+    font-family:  Tahoma,Verdana, Geneva, sans-serif;
+    color: #013d97;
+    font-size: 18px;
+
+}
 /* Polls section */
 .polls {
     background-color: #ffffff;
@@ -43,10 +49,7 @@ body {
     margin-bottom: 20px;
 }
 
-.polls h2 {
-    font-size: 24px;
-    margin-bottom: 20px;
-}
+
 
 /* Poll question */
 .poll-question {
