--- a/polls/templates/polls/poll_choices_update.html
+++ b/polls/templates/polls/poll_choices_update.html
@@ -15,10 +15,14 @@
 {% block content %}
 
 <section class='bg-light container'>
-    <h1 class="screen-reader-only">Poll choice Update</h1>   
-    <br><br><br>
-    <h2 >Update choice : <strong>{{ poll.poll_descript|safe }}</strong></h2>
    
+    <header class="text-secondary">
+        <h1>
+            <span class="fs-6">Update choice : </span>
+        </h1>
+        <h2 class="fs-4">{{ poll.poll_descript|safe }}</h2>
+    </header>   
+    
     <div class='row justify-content-center'>
         <div class="col-md-10 col-sm-11 border rounded border-secondary p-3 m-5 back-ggg">
             <form method="POST" enctype='multipart/form-data' novalidate>
