--- a/polls/templates/polls/poll_delete_confirm.html
+++ b/polls/templates/polls/poll_delete_confirm.html
@@ -16,7 +16,7 @@
 <section class='bg-light container'>
     
     <header class="txt-color text-center">Delete Poll
-        <h1 class='text-swcondary fs-4'
+        <h1 class='text-secondary fs-4'
             <br>
             <span class="fs-6 text-secondary">with CROWDVOICE polls you can Delete your poll easly</span>
         </h1>
