--- a/users/templates/users/profile_update.html
+++ b/users/templates/users/profile_update.html
@@ -19,8 +19,12 @@
 <br><br>
 <section class='bg-light container'>
     <br><br><br>
-<h1 class="screen-reader-only">Profile update</h1> 
-<h2 class='text-center'>Profile and Personal Information Update</h2>
+    <h1 class='text-center'>
+        Profile Update: {{request.user.username}} 
+      <br>
+      <span class="fs-6 text-secondary">Register as : {{request.user.role}}</span>
+      
+    </h1>
     
     <div class='row justify-content-center'>
         <div class="col-md-10 col-sm-11 border rounded border-secondary p-3 m-5 back-ggg">
