--- a/templates/base.html
+++ b/templates/base.html
@@ -24,7 +24,7 @@
         {% endif %}
         
         <!--link -- canonical -->
-        <link rel="canonical" href="http://127.0.0.1:8000/" />
+        <link rel="canonical" href="https://polls-dev-zqte.2.us-1.fl0.io/" />
 
        
 
