--- a/users/templates/users/select_role.html
+++ b/users/templates/users/select_role.html
@@ -29,11 +29,11 @@
     </section>
 
 
-    <section>
-        <p> Polls's Owner : you can Add a poll ,vote on the polls you not own it and display the results of voters</p>
-        <br>
-        <p> Voter : you can vote on all polls and display the results of voters</p>
-    </section >
+    <ul class="text-secondary">
+        <li> Polls's Owner : you can Add a poll ,vote on the polls you not own it and display the results of voters.</li>
+        <li> Voter : you can vote on all polls and display the results of voters.</li>
+    </ul >
+    <br><br><br>
 
 
 
