--- a/users/templates/users/user_login.html
+++ b/users/templates/users/user_login.html
@@ -17,9 +17,9 @@
 {% block content %}
 
     <section class='container polls bg-primary-subtle'>
-    
-        <h1 class="screen-reader-only">Login </h1> 
-        <h2 class='text-center'>Login</h2>
+        <h1 class='fs-6 text-center text-secondary mb-4'>
+            Login to   CROWDVOICE polls
+        </h1>
         <div class='row justify-content-center'>
             <div class="col-md-10 col-sm-11 border rounded border-secondary p-3 bg-light bg-gradient">
                 <form method="POST" enctype='multipart/form-data' novalidate>
