fix errors in settings.py

--- a/polls/templates/polls/poll_create.html
+++ b/polls/templates/polls/poll_create.html
@@ -16,7 +16,7 @@
 {% block content %}
 <section class='bg-light container'>
     <header class="txt-color text-center">
-        <h1 class='text-swcondary fs-4'>Launch New Poll on CrowdVoice polls
+        <h1 class='text-secondary fs-4'>Launch New Poll on CrowdVoice polls
             <br>
             <span class="fs-6 text-secondary">Build your audience with us</span>
         </h1>
