update register page

--- a/users/templates/users/user_register.html
+++ b/users/templates/users/user_register.html
@@ -16,9 +16,9 @@
        
         
     <section class='container polls bg-primary-subtle'>
-        <h1 class="screen-reader-only">Register</h1> 
-        <h2 class='text-center'>Register</h2>
-        
+        <h1 class='fs-6 text-center text-secondary mb-4'>
+            Register to CROWDVOICE polls
+        </h1>
         <div class='row justify-content-center'>
 
             
