update profile page

--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -54,8 +54,8 @@
                       </div>
                       
                       <div class='m-x-10'>
-                        <a type="link" class="btn btn-warning" href="{% url 'users:profile-update' %}" role="button"><span class="text-center">Update My Profile</span></a>
-                        <a type="link" class="btn btn-danger" href="" role="button"><span class="text-center">Change My Password</span></a>
+                        <a type="link" class="btn btn-sm btn-success" href="{% url 'users:profile-update' %}" role="button"><span class="text-center">Update Profile</span></a>
+                        <a type="link" class="btn btn-sm btn-danger" href="" role="button"><span class="text-center">Change Password</span></a>
                       </div>
                       <br>
                   </div>
