--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -55,7 +55,7 @@
                       
                       <div class='m-x-10'>
                         <a type="link" class="btn btn-sm btn-success" href="{% url 'users:profile-update' %}" role="button"><span class="text-center">Update Profile</span></a>
-                        <a type="link" class="btn btn-sm btn-danger" href="" role="button"><span class="text-center">Change Password</span></a>
+                        <a type="link" class="btn btn-sm btn-danger" href="{% url 'users:password_change' %}" role="button"><span class="text-center">Change Password</span></a>
                       </div>
                       <br>
                   </div>
