--- a/users/templates/users/user_login.html
+++ b/users/templates/users/user_login.html
@@ -38,7 +38,7 @@
             Not have account?<a href={% url 'users:select-role' %}> Register</a>
         </p>
         <p class='text-center'> 
-            {% comment %} <a href={% url 'users:password_reset' %}>Forget your password</a> {% endcomment %}
+            <a href={% url 'users:password_reset' %}>Forget your password</a>
         </p>
         <br>
     </section>
