--- a/users/templates/users/password_change_done.html
+++ b/users/templates/users/password_change_done.html
@@ -17,15 +17,19 @@
 {% block content %} 
 
 <section class='modify-content-center container'>
-<br><br><br>
-<h1 class="screen-reader-only">Pawssword Change done page for Codes City</h1> 
-<h2 class='text-center'>Pawssword Change done</h2>
 
-<div class="card m-5">
-  <div class="card-body">
-    <p class='text-center'>Pawssword Change done Successfully ..</p>
-    <p class='text-center'>🌷💐🌾🌼🌻🌸🌺🪻🥀</p>
-  </div>
-</div>
+  <h1 class='fs-6 text-center text-secondary mb-4'>
+    Pawssword Change done - CROWDVOICE polls
+  </h1> 
+
+
+    <div class="card m-5">
+      <div class="card-body">
+        <p class='text-center'>Pawssword Change done Successfully ..</p>
+        <p class='text-center'>🌷💐🌾🌼🌻🌸🌺🪻🥀</p>
+      </div>
+    </div>
+
+    
 </section>  
 {% endblock content %}
