--- a/users/templates/users/password_reset_confirm.html
+++ b/users/templates/users/password_reset_confirm.html
@@ -14,41 +14,47 @@
 
 
 
-{% block content %} 
+{% block content %}  
 <section class='bg-light container mt-3 mb-3'>
-
+    <br><br>
+       <h1 class="class='fs-6 text-center text-secondary mb-4">
+            Password Reset Confirm
+       </h1> 
+       
+       
     {% if validlink %}
 
-    <br><br>
-        <h1 class="screen-reader-only">Password Reset Confirm</h1> 
-        <h2 class='text-center'>Password Reset Confirm</h2>
-        <br>
-        <p>Please enter your new password twice so we can verify you typed it in correctly.</p>
+        <div class='row justify-content-center'>
+        <div class="col-md-10 col-sm-11 border rounded border-secondary p-3 m-5 mt-2 polls">
+                <p>Please enter your new password twice so we can verify you typed it in correctly.</p>
 
-        <form method="POST" novalidate>
-            {% csrf_token %}
-            <fieldset class="m-3">
-                
-                {% comment %} <input class="hidden" autocomplete="username" value="{{ form.user.get_username }}"> {% endcomment %}
-                
-                <div class="form-control mb-3 field-password1">
-                    {{ form.new_password1.errors }}
-                    <label  class='form-label' for="id_new_password1">New password:</label>
-                    {{ form.new_password1 }}
-                </div>
+                <form method="POST" novalidate>
+                    {% csrf_token %}
+                    <fieldset class="m-3">
+                        
+                        {% comment %} <input class="hidden" autocomplete="username" value="{{ form.user.get_username }}"> {% endcomment %}
+                        
+                        <div class="form-control mb-3 field-password1">
+                            {{ form.new_password1.errors }}
+                            <label  class='form-label' for="id_new_password1">New password:</label>
+                            {{ form.new_password1 }}
+                        </div>
 
-                <div class="form-control  mb-3 field-password2">
-                    {{ form.new_password2.errors }}
-                    <label   class='form-label'  for="id_new_password2">Confirm password:</label>
-                    {{ form.new_password2 }}
-                </div>
-                
-                <input type="submit"  class='btn-danger' value="Change my password">
-                <br><br>
-            </fieldset>
-        </form>
+                        <div class="form-control  mb-3 field-password2">
+                            {{ form.new_password2.errors }}
+                            <label   class='form-label'  for="id_new_password2">Confirm password:</label>
+                            {{ form.new_password2 }}
+                        </div>
+                        
+                        <input type="submit"  class='btn-danger' value="Change my password">
+                        <br><br>
+                    </fieldset>
+                </form>
 
-        {% else %}
+        </div>
+        <div>
+             
+    {% else %}
 
         <p>The password reset link was invalid, possibly because it has already been used.  Please request a new password reset.</p>
 
