--- a/users/templates/users/password_reset_done.html
+++ b/users/templates/users/password_reset_done.html
@@ -16,14 +16,21 @@
 
 {% block content %} 
 
-<section class='modify-content-center container'>
-    <br><br><br>
-    <h1 class="screen-reader-only">Password Reset Done!</h1> 
-    <h2 class='text-center'>Password Reset Done!</h2>
+<section class='container polls'>
+    <br>
+    <h1 class='fs-6 text-center text-secondary mb-4'>
+        Password Reset Done! - CROWDVOICE polls
+    </h1>
 
-    <div class="card m-5">
+    <br><br>
+    
+    <div class="text-center">
+        <i class="fa-solid fa-envelope-circle-check fa-2xl" style="color: #63E6BE;"></i>
+    </div>
+    <div class="card m-5 border-0">
     <div class="card-body">
         <p class='text-center'>We’ve emailed you instructions for setting your password, if an account exists with the email you entered. You should receive them shortly.</p>
+        <br>
         <p class='text-center'>If you don’t receive an email, please make sure you’ve entered the address you registered with, and check your spam folder.</p>
     </div>
     </div>
