--- a/users/templates/users/password_reset_form.html
+++ b/users/templates/users/password_reset_form.html
@@ -15,12 +15,13 @@
 
 
 {% block content %} 
-<section class='bg-light container'>
-    <br><br><br>
-    <h1 class="screen-reader-only">Password Reset Form for Codes City-Web Development, Django, Django Rest Framework.</h1> 
-    <h2 class='text-center'>Password Reset Form</h2>
+<section class='container polls bg-primary-subtle'>
+    <br>
+    <h1 class='fs-6 text-center text-secondary mb-4'>
+        Password Reset Form - CROWDVOICE polls
+    </h1>
     <div class='row justify-content-center'>
-        <div class="col-md-10 col-sm-11 border rounded border-secondary p-3 m-5 mt-2 back-ggg">
+        <div class="col-md-10 col-sm-11 border rounded border-secondary p-3 m-5 mt-2 polls">
             <form method="POST" enctype='multipart/form-data' novalidate>
                 {% csrf_token %}
 
