--- a/users/templates/users/password_change_done.html
+++ b/users/templates/users/password_change_done.html
@@ -23,13 +23,13 @@
   </h1> 
 
 
-    <div class="card m-5">
+    <div class="card m-5 border-0">
       <div class="card-body">
         <p class='text-center'>Pawssword Change done Successfully ..</p>
         <p class='text-center'>🌷💐🌾🌼🌻🌸🌺🪻🥀</p>
       </div>
     </div>
 
-    
+
 </section>  
 {% endblock content %}
