--- a/users/templates/users/password_reset_complete.html
+++ b/users/templates/users/password_reset_complete.html
@@ -3,8 +3,6 @@
 
 
 
-
-
 <!-- start inlclude  'message' -->
 {% block messages %}
    {% include 'includes/messages.html' %}
@@ -16,10 +14,11 @@
 
 {% block content %} 
 
-<section class='modify-content-center container'>
-<br><br><br>
-<h1 class="screen-reader-only">Password Reset Complate</h1> 
-<h2 class='text-center'>Password Reset Complate</h2>
+<section class='container polls'>
+<b>
+  <h1 class='fs-6 text-center text-secondary mb-4'>
+    Pawssword Resete Complete - CROWDVOICE polls
+  </h1> 
 
 <div class="card">
   <div class="card-body text-center">
