--- a/users/templates/users/profile_update.html
+++ b/users/templates/users/profile_update.html
@@ -31,7 +31,8 @@
             <form method="POST" enctype='multipart/form-data' novalidate>
                 {% csrf_token %}
                            
-                {{ profile|crispy }}
+                {{ profileform|crispy }}
+                {{ userform|crispy }}
                 
                 <div class='d-flex justify-content-between'>
                     <button type="submit" class="btn btn-success">Update</button>
