fix errors in update profile and userdata

--- a/users/templates/users/profile_update.html
+++ b/users/templates/users/profile_update.html
@@ -18,12 +18,12 @@
 
 <br><br>
 <section class='bg-light container'>
-    <br><br><br>
-    <h1 class='text-center'>
-        Profile Update: {{request.user.username}} 
+    
+    <h1 class='fs-5 text-secondary text-center'>
+        User Profile Update
       <br>
+      <span class="fs-6 text-secondary">username : {{request.user.username}} </span><br>
       <span class="fs-6 text-secondary">Register as : {{request.user.role}}</span>
-      
     </h1>
     
     <div class='row justify-content-center'>
