--- a/users/templates/users/password_change_done.html
+++ b/users/templates/users/password_change_done.html
@@ -28,6 +28,10 @@
         <p class='text-center'>Pawssword Change done Successfully ..</p>
         <p class='text-center'>🌷💐🌾🌼🌻🌸🌺🪻🥀</p>
       </div>
+      <div class="text-center">
+        <a class="btn btn-sm btn-dark" href="{% url 'users:user-login' %}">Login</a>
+      </div>
+      <br>
     </div>
 
 
